# chogori-platform

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  coding-style.md  install_deps.sh
_deprecated/nodepool_deprecated/: CMakeLists.txt  SeastarTransport.h
src/: CMakeLists.txt  README.md  seastar_service.cc
src/SKVClient/: CMakeLists.txt  Chrono.h  Common.h  ControlPlaneOracle.cpp  ControlPlaneOracle.h  Expression.h  FieldTypes.cpp  FieldTypes.h  K23SI.cpp  K23SI.h  MPackSerialization.h  SKVClient.h  SKVRecord.h  Status.h  Timestamp.cpp
src/SKVClient/src/: CMakeLists.txt
src/SKVClient/test/: CMakeLists.txt  ExpressionTest.cpp  SKVRecordTest.cpp  fakeserver.cpp  mpacktest.cpp
src/appbase/: Appbase.h  CMakeLists.txt
src/benchmarker/: Benchmarker.cpp  Benchmarker.h  CMakeLists.txt  KeySpace.h  Session.h
src/benchmarker/generator/: Generator.h  RandomNumberGenerator.h
src/benchmarker/proto/: CMakeLists.txt  k2bdto.proto
src/client/: BoostTransport.h  CMakeLists.txt  Client.cpp  Client.h  Executor.h  IClient.h  Main.cpp  PartitionMap.h  PartitionMessageTransport.h  README.md  node_test
src/client/boost/: CMakeLists.txt  Client.cpp  Client.h
src/client/controlPlaneClient/: CMakeLists.txt  Main.cpp
src/client/dataPlaneClient/: CMakeLists.txt  Main.cpp
src/client/executor/: EventLoopService.h  Executor.h  ExecutorQueue.h  ExecutorTask.h  IApplication.h  IApplicationFactory.h  IService.h  MessageService.h  ServicePlatform.h  TransportPlatform.h
src/client/lib/: CMakeLists.txt  Client.cpp  Client.h
src/client/main/: CMakeLists.txt  Main.cpp
src/cmd/: CMakeLists.txt
src/cmd/benchmark/: CMakeLists.txt  bench_client.cpp  bench_server.cpp  rdtsc.h
src/cmd/controlPlaneClient/: CMakeLists.txt  Main.cpp
src/cmd/dataPlaneClient/: CMakeLists.txt  Main.cpp
src/cmd/demo/: CMakeLists.txt  app.cpp  client.cpp  executor.cpp  service.cpp  tcptest.cpp  txbench_client.cpp  txbench_server.cpp  txn_client_demo.cpp
src/cmd/k2b/: CMakeLists.txt  Client.cpp  Service.cpp
src/cmd/master/: CMakeLists.txt  main.cpp
src/cmd/nodepool/: K2TXPlatform.cpp  K2TXPlatform.h  Main.cpp
src/common/: CMakeLists.txt  CollectionMetadata.h  Common.h  Constants.h  IntrusiveLinkedList.h  Log.h  MemoryArena.h  Message.h  ModuleId.h  PartitionManagerMessage.h  PartitionMessage.h  PartitionMetadata.h  Payload.h  Serialization.h  Status.cpp  Status.h  TimeMeasure.h
src/common/plog/: CMakeLists.txt  IPlog.h  PlogMock.cpp  PlogMock.h  PlogMock.hpp  plog_client.h  plog_client_common.h
src/common/scheduler/: CMakeLists.txt  ISchedulable.h  IScheduler.h  LoopScheduler.h  RootScheduler.h  RoundrobinScheduler.cpp  RoundrobinScheduler.h  Scheduler.h  SchedulingGroup.h  SeastarScheduler.cpp  SeastarScheduler.h  TcpService.h  roundrobin_scheduler.cc  roundrobin_scheduler.hh  seastar_scheduler.cc  seastar_scheduler.hh
src/common/seastar/: SeastarApp.h
src/config/: CMakeLists.txt  Cluster.h  ClusterConfig.h  Config.h  ConfigLoader.h  ConfigParser201907.h  ConfigParserLegacy.h  IConfigParser.h  NodeConfig.h  NodeEndpointConfig.h  NodePoolConfig.h  Transport.h  YamlUtils.h
src/executor/: ApplicationService.h  CMakeLists.txt  Executor.cpp  Executor.h  ExecutorQueue.h  IApplication.h  IApplicationContext.h  IServiceLauncher.h  MessageService.h  ServicePlatform.h
src/indexer/: CMakeLists.txt  HOTIndexer.cpp  HOTIndexer.h  MapIndexer.cpp  MapIndexer.h  UnorderedMapIndexer.h
src/k2/: CMakeLists.txt  README.md
src/k2/appbase/: AppEssentials.h  Appbase.cpp  Appbase.h  CMakeLists.txt
src/k2/assignmentManager/: AssignmentManager.cpp  AssignmentManager.h  CMakeLists.txt
src/k2/benchmarker/: KeySpace.h  Session.h
src/k2/dto/: K23SI.h  (+37 more)
src/logging/: CMakeLists.txt
src/modules/: CMakeLists.txt
src/node/: AssignmentManager.cpp  AssignmentManager.h  CMakeLists.txt  Collection.h  HOTIndexer.h  HOTMemtable.h  IndexerInterface.h  Main.cpp  MapIndexer.h  MapMemtable.h  MemtableInterface.h  Module.h  Node.cpp  Node.h  NodeConfig.h  NodePool.h  NodePoolImpl.h  Partition.cpp  Partition.h  PoolMonitor.cpp  PoolMonitor.h  README.md  TaskRequest.cpp  TaskRequest.h  Tasks.h  UnorderedMapIndexer.h  UnorderedMapMemtable.h
src/persistence/: CMakeLists.txt  IPersistentLog.h  IPersistentVolume.h  PersistentVolume.cpp  PersistentVolume.h
src/skvhttpclient/: CMakeLists.txt
src/transport/: BaseTypes.h  BoostTransport.h  CMakeLists.txt  Channel.cpp  Channel.h  Endpoint.cpp  Endpoint.h  Fragment.h  IRPCProtocol.cpp  IRPCProtocol.h  Listener.cpp  Listener.h  ListenerFactory.cpp  ListenerFactory.h  Log.h  Payload.cpp  Payload.h  Prometheus.cpp  Prometheus.h  README.md  RPCDispatcher.cpp  RPCDispatcher.h  RPCHeader.cpp  RPCHeader.h  RPCParser.cpp  RPCParser.h  RPCProtocolFactory.cpp  RPCProtocolFactory.h  RPCTypes.h  RRDMARPCChannel.cpp  RRDMARPCChannel.h  RRDMARPCProtocol.cpp  Request.cpp  Request.h  RetryStrategy.cpp  RetryStrategy.h  SeastarTransport.h  TCPListener.cpp  TCPListener.h  TCPRPCChannel.cpp  (+9 more)
src/tso/: tso_main.cpp
test/client/: CMakeLists.txt  ClientEventLoopIntegTest.cpp  ClientThreadPoolIntegTest.cpp  ExecutorEventLoopIntegTest.cpp  ExecutorLoopIntegTest.cpp  ExecutorThreadIntegTest.cpp  ExecutorThreadPoolIntegTest.cpp  PartitionRangeTest.cpp  TestFactory.h
test/config/: CMakeLists.txt  ConfigTest.cpp
test/cpo/: CMakeLists.txt  CPOClientTest.cpp  CPOTest.cpp  CPOTest.h  Main.cpp
test/k23si/: 3SITxnTest.cpp  CMakeLists.txt  ExpressionTest.cpp  HeartbeatTest.cpp  IndexerTest.cpp  K23SITest.cpp  KeyEncodingTest.cpp  Log.h  QueryTest.cpp  ReadCacheTest.cpp  SKVClientTest.cpp  SKVRecordTest.cpp  SKVSerTest.cpp  SchemaCreationTest.cpp  SerializableDocumentTest.cpp  WALTest.cpp
test/node/: AssignmentManagerTest.cpp  CMakeLists.txt  Main.cpp  Makefile
test/persistentVolume/: CMakeLists.txt  Makefile  PersistentVolumeTest.cpp
test/plog/: CMakeLists.txt  LogStreamTest.cpp  Main.cpp  PlogClientTest.cpp  PlogTest.cpp  PlogTest.h
test/plogmock/: CMakeLists.txt  Main.cpp  Makefile  PlogMockTest.cpp
test/transport/: CMakeLists.txt  EndpointTest.cpp  PayloadTest.cpp
(+813 files in other folders)
