#<!--
#    (C)opyright Futurewei Technologies Inc, 2019
#-->

add_subdirectory (common)
add_subdirectory (executor)
add_subdirectory (client)
add_subdirectory (modules)
add_subdirectory (node)
add_subdirectory (config)
add_subdirectory (cmd)
add_subdirectory (transport)
add_subdirectory (benchmarker)
