add_subdirectory (appbase)
add_subdirectory (assignmentManager)
add_subdirectory (cmd)
add_subdirectory (collectionMetadataCache)
add_subdirectory (common)
add_subdirectory (config)
add_subdirectory (cpo)
add_subdirectory (dto)
add_subdirectory (indexer)
add_subdirectory (infrastructure)
add_subdirectory (module)
add_subdirectory (nodePoolMonitor)
add_subdirectory (partitionManager)
add_subdirectory (persistence)
add_subdirectory (transport)
add_subdirectory (tso)
