file(GLOB HEADERS "*.h")
file(GLOB SOURCES "*.cpp")

add_executable (k23si_test ${HEADERS} K23SITest.cpp)
add_executable (indexer_test ${HEADERS} IndexerTest.cpp)
add_executable (skv_record_test ${HEADERS} SKVRecordTest.cpp)
add_executable (key_encoding_test ${HEADERS} KeyEncodingTest.cpp)
add_executable (schema_creation_test ${HEADERS} SchemaCreationTest.cpp)
add_executable (skv_ser_test ${HEADERS} SKVSerTest.cpp)
add_executable (3si_txn_test ${HEADERS} 3SITxnTest.cpp)
add_executable (skv_client_test ${HEADERS} SKVClientTest.cpp)
add_executable (query_test ${HEADERS} QueryTest.cpp)
add_executable (expression_test ${HEADERS} ExpressionTest.cpp)

target_link_libraries (k23si_test PRIVATE appbase Seastar::seastar tso_client k23si cpo_client infrastructure dto transport)
target_link_libraries (indexer_test PRIVATE k23si tso_client cpo_client infrastructure dto transport appbase Seastar::seastar)
target_link_libraries (skv_record_test PRIVATE dto transport)
target_link_libraries (key_encoding_test PRIVATE dto transport)
target_link_libraries (schema_creation_test PRIVATE appbase Seastar::seastar dto transport)
target_link_libraries (skv_ser_test PRIVATE dto transport)
target_link_libraries (3si_txn_test PRIVATE appbase dto transport tso_client Seastar::seastar)
target_link_libraries (skv_client_test PRIVATE tso_client k23si_client cpo_client appbase dto transport Seastar::seastar)
target_link_libraries (query_test PRIVATE tso_client k23si_client cpo_client appbase dto transport Seastar::seastar)
target_link_libraries (expression_test PRIVATE dto transport Seastar::seastar)

add_test(NAME indexer COMMAND indexer_test)
add_test(NAME skv_record COMMAND skv_record_test)
add_test(NAME key_encoding COMMAND key_encoding_test)
add_test(NAME skv_ser COMMAND skv_ser_test)
add_test(NAME expression COMMAND expression_test)
